Upgrade swagger to OpenApi3.0
