# app/api/routes/user/userApi.ts
@@ -2,7 +2,7 @@ import { Router } from 'express';
 import { body, validationResult } from 'express-validator';
 import authenticateToken from '../../middleware/authenticateToken';
 import HttpStatusCode from '../../../utils/enums/HttpCodeStatuses';
-import { create, update, getUser, getAllUsers, removeUser } from '../../../services/users/UsersService';
+import { create, update, getUser, getAllUsers, removeUser, getUserByEmail } from '../../../services/users/UsersService';
 
 const notFoundMessage = '404 - Entity not found!';
 
@@ -10,10 +10,37 @@ const userRoutes = Router();
 
 userRoutes.use(authenticateToken);
 
-userRoutes.get('/getAll', async (req, res, next) => {
+userRoutes.get('/', async (req, res, next) => {
   try {
     const users = await getAllUsers();
     res.status(HttpStatusCode.OK).json(users);
+  } catch (error) {
+    res.status(HttpStatusCode.INTERNAL_SERVER_ERROR).send(error.message);
+  }
+});
+
+userRoutes.post(
+  '/',
+  body('firstname').isString(),
+  body('lastname').isString(),
+  body('password').isString(),
+  body('email').isEmail(),
+  async (req, res, next) => {
+  try {
+    const { firstname, lastname, password, email } = req.body;
+    const errors = validationResult(req);
+
+    if (!errors.isEmpty()) {
+      return res.status(HttpStatusCode.UNPROCESSABLE_ENTITY).json({ errors: errors.array()});
+    }
+
+    const existingUser = await getUserByEmail(email);
+    if (existingUser) {
+      return res.status(HttpStatusCode.CONFLICT).json({ message: 'Email already in use.'});
+    }
+    
+    const user = await create({ firstname, lastname, password, email });
+    res.json(user).status(HttpStatusCode.OK);
   } catch (error) {
     res.status(HttpStatusCode.INTERNAL_SERVER_ERROR).send(error.message);
   }
@@ -28,22 +55,6 @@ userRoutes.get('/:userId', async (req, res, next) => {
     } else {
       res.status(HttpStatusCode.NOT_FOUND).send(notFoundMessage);
     }
-  } catch (error) {
-    res.status(HttpStatusCode.INTERNAL_SERVER_ERROR).send(error.message);
-  }
-});
-
-userRoutes.post('/', body('email').isEmail(), async (req, res, next) => {
-  try {
-    const { firstname, lastname, password, email } = req.body;
-    const errors = validationResult(req);
-
-    if (!errors.isEmpty()) {
-      return res.status(HttpStatusCode.UNPROCESSABLE_ENTITY).json({ errors: errors.array()})
-    }
-    
-    const user = await create({ firstname, lastname, password, email });
-    res.json(user).status(HttpStatusCode.OK);
   } catch (error) {
     res.status(HttpStatusCode.INTERNAL_SERVER_ERROR).send(error.message);
   }
